<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bmi_chiso</string>
    <string name="empty_list_text">empty list text</string>
    <string name="add_record">Lưu</string>
    <string name="tcb">Nhập tên của bạn</string>
    <string name="cccb">Chiều cao của bạn</string>
    <string name="cncb">Cân nặng của bạn</string>
    <string name="bmi">Tính BMI</string>
    <string name="x">Thử lại</string>
    <string name="ls">Lịch sử</string>
    <string name="tb">Nhập họ và tên của bạn</string>
    <string name="cc">Nhập chiều cao của bạn(m) VD: 150cm = 1.50m</string>
    <string name="cn">Nhập cân nặng của bạn(Kg)</string>
    <string name="csbmi">BMI</string>
    <string name="kq">Chuẩn đoán</string>
    <string name="cann">Cân nặng</string>
    <string name="chieuc">Chiều cao</string>
    <string name="kqbmi">Kết quả BMI</string>
    <string name="n">Ngày</string>
    <string name="no_title">không có tiêu đê</string>

</resources>